# discordbot

./: README.md
DiscordMusicBot/: pyproject.toml  requirements.txt
DiscordMusicBot/DSbot/: .env  MusicDownload.py  MusicPlayer.py  Soundboard.py  __init__.py  bot.py
bot/: MusicDownload.py  MusicPlayer.py  Ringtone.py  Soundboard.py  Top10.py  UnitTesztek.py  bot.py  te.py  top_10_songs.txt  toptest.py
