[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-music-bot"
version = "0.1.0"
description = "A Discord bot for playing and managing music."
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

# Add dependencies your bot uses here
dependencies = [
    "discord.py",
    "youtube_dl",
    "pydub",
    "ffmpeg-python",
    "python-dotenv"
]

[project.urls]
Homepage = "https://github.com/yourusername/discord-music-bot"
Repository = "https://github.com/yourusername/discord-music-bot"

[tool.setuptools.packages.find]
where = ["."]
include = ["bot"]
