[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-music-bot"
version = "0.1.0"
description = "Zenei discord bot."
authors = [
    { name = "Seregély Dominik", email = "seregelydominik@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "discord.py",
    "youtube_dl",
    "pydub",
    "ffmpeg-python",
    "python-dotenv"
]

[project.urls]
Repository = "https://github.com/SeregelyDominik/discordbot"

[tool.setuptools.packages.find]
where = ["."]
include = ["bot"]
